Change to grouping classes solution
In original commit I submited a solution in which i had a common class for common styles.
However, I am supposed to use class grouping selector to solve this, not a common class.
In this commit I fixed this.

--- a/foundations/intro-to-css/03-grouping-selectors/index.html
+++ b/foundations/intro-to-css/03-grouping-selectors/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <button class="font-class clickme-class">Click Me!</button>
-    <button class="font-class noclickme-class">No, Click Me!</button>
+    <button class="clickme-class">Click Me!</button>
+    <button class="noclickme-class">No, Click Me!</button>
   </body>
 </html>
